--- a/ivy.xml
+++ b/ivy.xml
@@ -18,7 +18,7 @@
 <ivy-module version="2.0"
             xmlns:e="http://ant.apache.org/ivy/extra">
 
-  <info organisation="org.apache.zookeeper"
+  <info organisation="gardnervickers"
         module="${name}" revision="${version}">
     <license name="Apache 2.0"/>
     <ivyauthor name="Apache ZooKeeper" url="http://zookeeper.apache.org"/>
@@ -36,13 +36,13 @@
   </configurations>
 
   <publications>
-    <artifact name='org.apache.zookeeper' type='jar' ext='jar' />
+    <artifact name='gardnervickers' type='jar' ext='jar' />
   </publications>
 
   <dependencies>
     <dependency org="org.slf4j" name="slf4j-api" rev="1.6.1"/>
     <dependency org="org.slf4j" name="slf4j-log4j12" rev="1.6.1" transitive="false"/>
-  
+
     <dependency org="org.apache.maven.wagon" name="wagon-http" rev="2.4" conf="mvn-ant-task->default"/>
     <dependency org="org.apache.maven" name="maven-ant-tasks" rev="2.1.3" conf="mvn-ant-task->default"/>
     <!-- transitive false turns off dependency checking, log4j deps seem borked -->
@@ -60,7 +60,7 @@
                conf="test->default"/>
     <dependency org="com.puppycrawl.tools" name="checkstyle" rev="6.1.1"
                 conf="test->default"/>
-    <dependency org="commons-collections" name="commons-collections" 
+    <dependency org="commons-collections" name="commons-collections"
                 rev="3.2.2" conf="test->default"/>
 
     <dependency org="jdiff" name="jdiff" rev="1.0.9"
@@ -68,11 +68,11 @@
     <dependency org="xerces" name="xerces" rev="1.4.4"
                 conf="jdiff->default"/>
 
-    <dependency org="org.apache.rat" name="apache-rat-tasks" 
+    <dependency org="org.apache.rat" name="apache-rat-tasks"
                 rev="0.6" conf="releaseaudit->default"/>
-    <dependency org="commons-lang" name="commons-lang" 
+    <dependency org="commons-lang" name="commons-lang"
                 rev="2.4" conf="releaseaudit->default"/>
-    <dependency org="commons-collections" name="commons-collections" 
+    <dependency org="commons-collections" name="commons-collections"
                 rev="3.2.2" conf="releaseaudit->default"/>
 
     <dependency org="commons-io" name="commons-io" rev="2.4"
